# mdhearts

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  FINAL_TRAINING_RESULTS.md  GEMINI.md  GEN4_READY.md  PR_SUMMARY.md  README.md  _make_doc.py  _temp_write_doc.py  _write_doc.py  bc_hard_20ep_10k.json  gen2_weights.json  gen3_checkpoint_tracking.txt  gen3_weights.json  gen4_checkpoint_tracking.txt  launch_gen4.bat  run_ultra_hard.sh  tmp.txt  tmp_cov.txt  tmp_cov_latest.txt  train_pipeline.bat  trained_weights.json  win32_dump.txt  win32_full.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
ai_training/: README.md
assets/: cards.json
bench/: bench.yaml  smoke.yaml  (+2 more)
crates/hearts-app/: Cargo.toml  build.rs
crates/hearts-app/benches/: hard_decision.rs  heuristic_decision.rs
crates/hearts-app/res/: app.manifest  app.rc  generate_icon.py
crates/hearts-app/src/: cli.rs  controller.rs  dataset.rs  debug.rs  endgame_export.rs  lib.rs  main.rs  telemetry.rs
crates/hearts-app/src/bot/: adviser.rs  endgame.rs  mod.rs  params.rs  pass.rs  play.rs  scoring.rs  search.rs  search_deep.rs  tracker.rs
crates/hearts-app/src/eval/: mixed.rs  mod.rs  stats.rs  types.rs
crates/hearts-app/src/platform/: mod.rs  win32.rs  winui.rs
crates/hearts-app/src/policy/: embedded.rs  heuristic.rs  mod.rs
crates/hearts-app/src/rl/: env.rs  experience.rs  mod.rs  observation.rs  rewards.rs
crates/hearts-app/src/weights/: generated.rs  loader.rs  mod.rs
crates/hearts-app/tests/: bot_coverage.rs  bot_golden.rs  cli_integration.rs  cli_tests.rs  dataset_adviser_bias.rs  endgame_feed_cap_golden.rs  endgame_feed_cap_smoke.rs  endgame_feed_hearts_to_leader.rs  endgame_golden.rs  followup_avoid_feeding_nonleader.rs  followup_qs_ok_without_existing_penalties.rs  hard_ab_skip_smoke.rs  hard_avoid_feeding_nonleader.rs  hard_branch_limit.rs  hard_budget_determinism.rs  hard_budget_steps_scanned.rs  hard_constructed_midtrick_flip.rs  hard_constructed_midtrick_neartie.rs  hard_constructed_midtrick_neartie_east.rs  hard_continuation_flips_choice.rs  hard_continuation_tie_break_golden.rs  hard_ctrl_handoff.rs  hard_determinization_flip_golden.rs  hard_determinization_smoke.rs  hard_determinization_strict_flip.rs  hard_endgame_dp_explain_shift.rs  hard_endgame_dp_flip_from_seed.rs  hard_endgame_dp_flip_golden.rs  hard_endgame_dp_golden.rs  hard_endgame_dp_hits.rs  hard_endgame_dp_minimal_constructed.rs  hard_endgame_dp_minimal_flip.rs  hard_endgame_dp_minimal_w2120.rs  hard_endgame_dp_smoke.rs  hard_endgame_self_protect.rs  hard_flipping_golden_adaptive.rs  hard_leader_dump_choice.rs  hard_midtrick_disagreement.rs  hard_monotonic_fallback.rs  hard_moon_relief_considering.rs  (+36 more)
crates/hearts-app/tests/fixtures/: adviser_play_bias.json  endgame_1373_north.json  endgame_2120_west.json  endgame_2263_west.json  endgame_2315_west.json  full_snapshot_example.json
crates/hearts-bench/: Cargo.toml
crates/hearts-bench/src/: analytics.rs  config.rs  lib.rs  logging.rs  main.rs  telemetry.rs
crates/hearts-bench/src/tournament/: external.rs  mod.rs  permutations.rs
crates/hearts-bench/tests/: smoke.rs
docs/: CI_EVAL.md  (+84 more)
(+1081 files in other folders)
