[package]
name = "hearts-app"
version = "1.0.1"
edition = "2024"

[features]
default = []

[dependencies]
hearts-core = { path = "../hearts-core" }
hearts-ui = { path = "../hearts-ui" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
windows = { version = "0.62.1", default-features = false, features = [
    "Foundation",
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem"
] }
windows-numerics = "0.3"

[[bin]]
name = "mdhearts"
path = "src/main.rs"

[build-dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }
embed-resource = "2"
sha2 = "0.10"


